--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <article>
 <h1>Informatica e Telecomunicazioni</h1>
-<img class="presentazione" src="immagini/img1.png">
+<img class="presentazione" src="img1.png">
 <br>
 <h1>Cosa si studia?</h1>
 <p>L'indirizzo di Informatica e Telecomunicazioni prepara lo studente nel
