--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 	<li>Sviluppo software</li>
 	<li>Tecnologie web</li>
 </ul>
-<img class="classe" src="immagini/img2.png" >
+<img class="classe" src="img2.png" >
 <h1>Competenze professionali</h1>
 <p>Il/La Diplomato/a alla fine del percorso di studi nell'indirizzo di
 	"Informatica e Telecomunicazioni" acquisisce competenze
@@ -279,7 +279,7 @@
 <p>Via Sario Bassanelli 9/11 40129 Bologna</p>
 <h1>Email</h1>
 <p>bois01900x@istruzione.it	</p>
-<img class="logo" src="immagini/img3.png">
+<img class="logo" src="img3.png">
 </aside>
 </section>
 
