--- a/filter_bubble.html
+++ b/filter_bubble.html
@@ -29,14 +29,14 @@
                 Gli algoritmi dei social media e dei motori di ricerca personalizzano costantemente i contenuti che vediamo, 
                 creando una "bolla" di informazioni che rinforza le nostre convinzioni preesistenti, limitando l'esposizione a nuove idee.
             </p>
-            <img class="bubble" src="immagini/BUBBLE_IMAGE.jpg">
+            <img class="bubble" src="BUBBLE_IMAGE.jpg">
 
             <h3>Le conseguenze della filter bubble sulla società</h3>
             <p>
                 La filter bubble ha implicazioni significative per la nostra comprensione della realtà. Limita la diversità delle informazioni che riceviamo, 
                 alimentando polarizzazione e aumentando la separazione tra gruppi sociali diversi.
             </p>
-            <img class="impact" src="immagini/IMPACT_IMAGE.jpg">
+            <img class="impact" src="IMPACT_IMAGE.jpg">
         </article>
 
         <aside>
