--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<a href="informatica_openday.pdf" download>
 			<button>download volantino</button>
 		</a>	
-		<a href="#"> filter bubble</a>
+		<a href="filter_bubble.html"> filter bubble</a>
 		<a href="https://avbo.edu.it/"> SITO UFFICIALE</a>
 		
 		</nav>
